infrastructure/kubernetes/compatibility/deploy/k8s/astrbot_with_napcat/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astrbot-web
  namespace: astrbot-ns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - __ASTRBOT_INGRESS_HOST__
      secretName: __ASTRBOT_TLS_SECRET_NAME__
  rules:
    - host: __ASTRBOT_INGRESS_HOST__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: astrbot-web
                port:
                  name: web
